--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-gradient-progress": "^1.0.3",
     "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.3",
     "react-typed": "^1.2.0",
